--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+html::-webkit-scrollbar{
+  display:none;
+}
+html{
+  scrollbar-width: none;
+}
